--- a/layout.html
+++ b/layout.html
@@ -1,3 +1,6 @@
 <link rel="stylesheet" type="text/css" href="layout.css" />
+<link rel="javscript" type="text/javascript" href="controls.js" />
+<link rel="javscript" type="text/javascript" href="roadway.js" />
+<link rel="javscript" type="text/javascript" href="simulation.js" />
 <div id="roadway">Roadway</div>
 <div id="controls">Controls</div>
