--- a/layout.html
+++ b/layout.html
@@ -2,5 +2,6 @@
 <link rel="javscript" type="text/javascript" href="controls.js" />
 <link rel="javscript" type="text/javascript" href="roadway.js" />
 <link rel="javscript" type="text/javascript" href="simulation.js" />
+<link rel="javscript" type="text/javascript" href="main.js" />
 <div id="roadway">Roadway</div>
 <div id="controls">Controls</div>
