--- a/layout.html
+++ b/layout.html
@@ -1,7 +1,12 @@
-<link rel="stylesheet" type="text/css" href="layout.css" />
-<link rel="javscript" type="text/javascript" href="controls.js" />
-<link rel="javscript" type="text/javascript" href="roadway.js" />
-<link rel="javscript" type="text/javascript" href="simulation.js" />
-<link rel="javscript" type="text/javascript" href="main.js" />
-<div id="roadway">Roadway</div>
-<div id="controls">Controls</div>
+<head>
+  <link rel="stylesheet" type="text/css" href="layout.css" />
+  <link rel="javscript" type="text/javascript" href="controls.js" />
+  <link rel="javscript" type="text/javascript" href="roadway.js" />
+  <link rel="javscript" type="text/javascript" href="simulation.js" />
+  <link rel="javscript" type="text/javascript" href="main.js" />
+</head>
+
+<body onload="init()">
+  <div id="roadway">Roadway</div>
+  <div id="controls">Controls</div>
+</body>
