--- a/layout.html
+++ b/layout.html
@@ -1,9 +1,9 @@
 <head>
   <link rel="stylesheet" type="text/css" href="layout.css" />
-  <link rel="javscript" type="text/javascript" href="controls.js" />
-  <link rel="javscript" type="text/javascript" href="roadway.js" />
-  <link rel="javscript" type="text/javascript" href="simulation.js" />
-  <link rel="javscript" type="text/javascript" href="main.js" />
+  <script type="text/javascript" src="controls.js" />
+  <script type="text/javascript" src="roadway.js" />
+  <script type="text/javascript" src="simulation.js" />
+  <script type="text/javascript" src="main.js" />
 </head>
 
 <body onload="init()">
