--- a/layout.html
+++ b/layout.html
@@ -1,9 +1,9 @@
 <head>
   <link rel="stylesheet" type="text/css" href="layout.css" />
-  <script type="text/javascript" src="controls.js" />
-  <script type="text/javascript" src="roadway.js" />
-  <script type="text/javascript" src="simulation.js" />
-  <script type="text/javascript" src="main.js" />
+  <script type="text/javascript" src="controls.js"></script>
+  <script type="text/javascript" src="roadway.js"></script>
+  <script type="text/javascript" src="simulation.js"></script>
+  <script type="text/javascript" src="main.js"></script>
 </head>
 
 <body onload="init()">
