--- a/layout.html
+++ b/layout.html
@@ -1,5 +1,6 @@
 <head>
   <link rel="stylesheet" type="text/css" href="layout.css" />
+  <script type="text/javascript" src="statistics.js"></script>
   <script type="text/javascript" src="controls.js"></script>
   <script type="text/javascript" src="roadway.js"></script>
   <script type="text/javascript" src="simulation.js"></script>
