--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Trafficnet</h1>
+      <iframe src="https://rawgit.com/Macflash/StartApp/master/TrafficNet/" style="border: 0px none; width:100%; height: 600px;"></iframe>
       <h2 class="project-tagline">Traffic Simulator</h2>
       <a href="https://github.com/Macflash/TrafficNet" class="btn">View on GitHub</a>
       <a href="https://github.com/Macflash/TrafficNet/zipball/master" class="btn">Download .zip</a>
