--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Trafficnet by Macflash</title>
+    <title>TrafficNet by Macflash</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Trafficnet</h1>
-      <iframe src="https://rawgit.com/Macflash/StartApp/master/TrafficNet/" style="border: 0px none; width:100%; height: 600px;"></iframe>
+      <h1 class="project-name">TrafficNet</h1>
+      <iframe src="https://rawgit.com/Macflash/TrafficNet/master/layout.html" style="border: 0px none; width:100%; height: 600px;"></iframe>
       <h2 class="project-tagline">Traffic Simulator</h2>
       <a href="https://github.com/Macflash/TrafficNet" class="btn">View on GitHub</a>
       <a href="https://github.com/Macflash/TrafficNet/zipball/master" class="btn">Download .zip</a>
