--- a/layout.html
+++ b/layout.html
@@ -19,7 +19,7 @@
 <div id="overlay" class="rway"></div>
 <div id="roadway" class="rway"></div>
 
-  <div id="controls">
+  <div id="controls" style="left: 400px !important;">
 	<input type="range" name="Lanes" />
   </div>
 
